<resources>
    <!-- base -->
    <string name="app_name">pa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- setting fragment -->
    <string name="settings_default_fullName">Иванов Николай</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_default_userName">ivanov782</string>
    <string name="settings_default_number_phone">+7 (981) 959–45–68</string>
    <string name="settings_textView_account">Аккаунт</string>
    <string name="settings_label_number_phone">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_label_userName">Имя пользователя</string>
    <string name="settings_default_about">О себе</string>
    <string name="settings_label_about">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>

    <string name="settings_title_behavior">ВЫБРАТЬ ФОТО</string>
    <string name="settings_action_photo_behavior">Сделать снимок</string>
    <string name="settings_delete_photo_behavior">Удалить</string>
    <string name="settings_select_photo_behavior">Загрузить из галереи</string>

    <!-- enter fragment -->
    <string name="register_image_logo_description">Логотип компании</string>
    <string name="register_label_enter_email">Логин</string>
    <string name="register_hint_enter_email">E-mail</string>
    <string name="register_hint_enter_password">Пароль</string>
    <string name="register_label_enter_password">Пароль</string>
    <string name="register_btn_enter">Вход</string>
</resources>
