<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/behavior"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/behavior_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        android:text="@string/settings_title_behavior"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/behavior_separator_item_1"
        style="@style/behavior_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/behavior_title" />

    <Button
        android:id="@+id/action_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_behavior"
        android:drawableStart="@drawable/ic_camera_w"
        android:drawablePadding="16dp"
        android:maxHeight="56dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/settings_action_photo_behavior"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/behavior_separator_item_1" />

    <Button
        android:id="@+id/select_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_behavior"
        android:drawableStart="@drawable/ic_photo_w"
        android:drawablePadding="16dp"
        android:maxHeight="56dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/settings_select_photo_behavior"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_camera" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_behavior"
        android:drawableStart="@drawable/ic_delete_r"
        android:drawablePadding="16dp"
        android:maxHeight="56dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/settings_delete_photo_behavior"
        android:textAlignment="textStart"
        android:textColor="@color/alizarin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>